# MixformerV2-onnx

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_trt.cpp  mixformer_onnx.cpp  mixformer_onnx.h  mixformer_trt.cpp  mixformer_trt.h
mixformer-pyonnx/: mf_tracker_ort.py
mixformer-pytrt/: log.txt  mf_tracker_trt.py  mixformer_construct_trt.py  mixformer_nvinfer copy.py  mixformer_nvinfer.py  onnx2trt copy.py  onnx2trt.py  onnx2trt_backbone.py  onnx2trt_head.py  ostrack_nvinfer.py
test/: test_client.py  test_server.py
